<resources>
    <string name="app_name">Notes</string>
    <string name="add">Add</string>
    <string name="add_the_item_to_the_list">Add the item to the list</string>
    <string name="remove">Remove</string>
    <string name="remove_the_item_from_the_list">Remove the item from the list</string>
    <string name="open">Open</string>
    <string name="open_the_item_of_the_list">Open the item of the list</string>
    <string name="edit">Edit</string>
    <string name="edit_the_note_from_the_list">Edit the note from the list</string>
    <string name="input_the_notes_title">Input the notes title</string>
    <string name="input_the_notes_address">Input the notes address</string>
    <string name="input_the_notes_text">Input the notes text</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="attantion">Attantion!!!</string>
    <string name="file_name">note_with_title_list</string>
    <string name="to_retry">To retry</string>
    <string name="there_are_no_notes_click_on_the_bottom_right">There are no notes.\n Click \"+\" on the bottom right to create</string>
    <string name="there_are_no_notes_click_on_the_top_right">There are no notes.\n Click \"+\" on the top right to create</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
